httpd/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
