httpd/httpd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpd-deployment-ingress
spec:
  rules:
  - host: apache.cloudapps.example.com
    http:
      paths:
      - backend:
          serviceName: httpd-deployment
          servicePort: 80
